[package]
name = "frc_robot_2020"
version = "0.1.0"
authors = ["fred"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpilib = "0.4" 

[package.metadata.frc]
team-number = 8012
# rio-address = "10.1.14.2"
target-dir = "target"
